--- a/src/main/resources/templates/front-end/user/test-only/test5.html
+++ b/src/main/resources/templates/front-end/user/test-only/test5.html
@@ -26,5 +26,12 @@
     <input type="submit" value="尋找">
 </form>
 
+<div>
+    <h1>登出</h1>
+    <form id="logoutForm" action="/user_api/user_logout" method="post">
+        <button type="submit">登出</button>
+    </form>
+</div>
+
 </body>
 </html>
