--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -188,7 +188,7 @@
                                     </div>
                                     <ul class="user-list-wrapper">
                                         <li>
-                                            <a href="#">
+                                            <a href="/socialpost/student_socialpost">
                                                 <i class="feather-home"></i>
                                                 <span>會員中心</span>
                                             </a>
