--- a/src/main/resources/templates/front-end/user/user_login.html
+++ b/src/main/resources/templates/front-end/user/user_login.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" th:href="@{/css/joy/login.css}">
 </head>
 
-<body class="rbt-header-sticky">
+<body class="rbt-header-sticky body-login">
 <!-- /user_api/find_account_by_mail/ -->
     <!-- Start Header Area  頁首 桌機-->
     <header class="rbt-header rbt-header-10">
