--- a/src/main/resources/templates/front-end/user/user_register.html
+++ b/src/main/resources/templates/front-end/user/user_register.html
@@ -50,7 +50,7 @@
 
   </head>
 
-  <body class="rbt-header-sticky">
+  <body class="rbt-header-sticky body-register">
     <!-- Start Header Area  頁首 桌機-->
     <header class="rbt-header rbt-header-10">
       <div class="rbt-sticky-placeholder"></div>
