--- a/src/main/resources/static/css/register-verify.css
+++ b/src/main/resources/static/css/register-verify.css
@@ -1,56 +1,50 @@
-#lightbox-verify{
-    position: fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height: 100vh;
-    background-color: hsla(0, 0%, 0%, .5);
-    z-index: 5;
+#lightbox-verify {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: hsla(0, 0%, 0%, .5);
+	z-index: 5;
 }
 
+#lightbox-verify article {
+	background-color: white;
+	width: 90%;
+	max-width: 800px;
+	border-radius: 10px;
+	box-shadow: hsla(0, 0%, 0%, .5);
+	padding: 10px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 50px 0;
+}
 
-#lightbox-verify article{  
-    background-color: white;
-    width: 90%;
-    max-width: 800px;
-    border-radius: 10px;
-    box-shadow: hsla(0, 0%, 0%, .5);
-    padding: 10px;
-    position: fixed;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-  
-    padding: 50px 0;
-  }
+.body-register .rbt-contact-form.contact-form-style-1 {
+	z-index: 0;
+}
 
-  .rbt-contact-form.contact-form-style-1{
-    z-index: 0;
-  }
+.body-register .article-inner-wrapper-number-input {
+	display: flex;
+	margin: 0 auto;
+	width: fit-content;
+}
 
+.body-register .article-inner-wrapper-number-input input {
+	width: 64px;
+	height: 64px;
+}
 
-  .article-inner-wrapper-number-input{
-    display: flex;
-    margin: 0 auto;
-    width: fit-content;
-  }
+.body-register .article-inner-wrapper-number-input input:not(:first-child) {
+	margin-left: 24px;
+}
 
-  .article-inner-wrapper-number-input input{
-    width: 64px;
-    height: 64px;
+.body-register .resend {
+	display: flex;
+}
 
-
-  }
-
-  .article-inner-wrapper-number-input input:not(:first-child){
-    margin-left: 24px;
-  }
-
-  .resend{
-    display: flex;
-  }
-
-
-  .hint{
-    color:red;
-  }
+.body-register .hint {
+	color: red;
+}
