--- a/src/main/resources/templates/front-end/included-head.html
+++ b/src/main/resources/templates/front-end/included-head.html
@@ -1,23 +1,30 @@
  	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" th:href="@{/css/vendor/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/css/vendor/slick.css}">
-    <link rel="stylesheet" th:href="@{/css/vendor/slick-theme.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/sal.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/feather.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/fontawesome.min.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/euclid-circulara.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/swiper.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/magnify.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/odometer.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/animation.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/bootstrap-select.min.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/jquery-ui.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/magnigy-popup.min.css}">
-    <link rel="stylesheet" th:href="@{/css/plugins/plyr.css}">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+
     <link rel="stylesheet" th:href="@{/css/style_add.css}">
     <link rel="stylesheet" th:href="@{/css/mok/mok_opinion.css}">
+    <link rel="stylesheet" th:href="@{/css/student_dashboard_2.css}">
+    <link rel="stylesheet" th:href="@{/css/register-verify.css}" />
+    <link rel="stylesheet" th:href="@{/css/joy/login.css}">
+    <link rel="stylesheet" th:href="@{/css/joy/register.css}" />
+    <link rel="stylesheet" th:href="@{/css/forget_password.css}">
+    
+    <link rel="stylesheet" th:href="@{/assets/css/vendor/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/vendor/slick.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/vendor/slick-theme.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/sal.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/feather.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/fontawesome.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/euclid-circulara.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/swiper.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/magnify.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/odometer.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/animation.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/bootstrap-select.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/jquery-ui.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/magnigy-popup.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/plyr.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/style.css}">
     
     <title>fitanywhere</title>
