--- a/src/main/resources/templates/front-end/mj/course_details_2.html
+++ b/src/main/resources/templates/front-end/mj/course_details_2.html
@@ -479,8 +479,8 @@
                                     <ul class="mega-menu-item">
                                         <li><a href="shop.html">Shop <span class="rbt-badge-card">Sale Anything</span></a></li>
                                         <li><a href="single-product.html">Single Product</a></li>
-                                        <li><a href="cart.html">Cart Page</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
+                                        <li><a href="../cart/cart.html">Cart Page</a></li>
+                                        <li><a href="../cart/checkout.html">Checkout</a></li>
                                         <li><a href="wishlist.html">Wishlist Page</a></li>
                                         <li><a href="my-account.html">My Acount</a></li>
                                         <li><a href="login.html">Login & Register</a></li>
@@ -699,7 +699,7 @@
     </div>
 </div>
 <!-- Start Side Vav -->
-<div th:insert="front-end/mj/cartview.html"></div>
+<div th:replace="front-end/cart/cartview.html"></div>
 <!-- End Side Vav -->
 <a class="close_side_menu" href="javascript:void(0);"></a>
 
