update cartview 加入購物車、刪除購物車項目等操作

--- a/src/main/resources/templates/front-end/cart/cart.html
+++ b/src/main/resources/templates/front-end/cart/cart.html
@@ -706,7 +706,7 @@
 </div>
 <!-- Start Side Vav -->
 
-<div th:insert="front-end/mj/cartview.html"></div>
+<div th:replace="front-end/cart/cartview.html"></div>
 <!-- End Side Vav -->
 <a class="close_side_menu" href="javascript:void(0);"></a>
 
@@ -745,56 +745,23 @@
                                     <th class="pro-thumbnail">圖片</th>
                                     <th class="pro-title">課程名稱</th>
                                     <th class="pro-price">價格</th>
-                                    <!-- <th class="pro-quantity">數量</th> -->
                                     <th class="pro-subtotal">總計</th>
                                     <th class="pro-remove">刪除</th>
                                 </tr>
                                 </thead>
                                 <tbody>
+
+
+
                                 <tr>
                                     <td class="pro-thumbnail"><a href="#"><img th:src="@{/assets/images/product/1.jpg}" alt="Product"></a></td>
                                     <td class="pro-title"><a href="#">Miracle Morning</a></td>
                                     <td class="pro-price"><span>NT$48.00</span></td>
-                                    <!-- <td class="pro-quantity">
-                                        <div class="pro-qty"><input type="text" value="1"></div>
-                                    </td> -->
                                     <td class="pro-subtotal"><span>NT$100.00</span></td>
                                     <td class="pro-remove"><a href="#"><i class="feather-x"></i></a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img th:src="@{/assets/images/product/7.jpg}" alt="Product"></a></td>
-                                    <td class="pro-title"><a href="#">Happy Strong</a></td>
-                                    <td class="pro-price"><span>NT$100.00</span></td>
-                                    <!-- <td class="pro-quantity">
-                                        <div class="pro-qty"><input type="text" value="2"></div>
-                                    </td> -->
-                                    <td class="pro-subtotal"><span>NT$120.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="feather-x"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img th:src="@{/assets/images/product/3.jpg}" alt="Product"></a></td>
-                                    <td class="pro-title"><a href="#">Rich Dad Poor Dad</a></td>
-                                    <td class="pro-price"><span>NT$59.00</span></td>
-                                    <!-- <td class="pro-quantity">
-                                        <div class="pro-qty"><input type="text" value="1"></div>
-                                    </td> -->
-                                    <td class="pro-subtotal"><span>NT$150.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="feather-x"></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img th:src="@{/assets/images/product/4.jpg}" alt="Product"></a></td>
-                                    <td class="pro-title"><a href="#">Momentum Theorem</a></td>
-                                    <td class="pro-price"><span>NT$250.00</span></td>
-                                    <!-- <td class="pro-quantity">
-                                        <div class="pro-qty"><input type="text" value="1"></div>
-                                    </td> -->
-                                    <td class="pro-subtotal"><span>NT$270.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="feather-x"></i></a>
-                                    </td>
-                                </tr>
+
                                 </tbody>
                             </table>
                         </div>
