--- a/src/main/resources/static/css/student_dashboard_2.css
+++ b/src/main/resources/static/css/student_dashboard_2.css
@@ -288,3 +288,38 @@ margin-left: 10px;
 .reply-member img{
     width: 69px;
 }
+
+
+.search-result{
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.08);
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 15px;
+
+    border-radius: 6px;
+    margin-bottom: 20px;
+
+    border:2px solid #e6e3f1;
+}
+
+.search-result-list-one{
+    display: flex;
+    
+    align-items: center;
+
+}
+
+.search-result-list-one:not(:last-child){
+    margin-bottom: 15px;
+}
+
+.search-result-list-one img{
+    width: 50px;
+    border-radius:100%;
+}
+
+.search-result-list-one p{
+    margin-left: 10px;
+}
