更新 後台 課程折扣管理.html backend_included_sidebar.html 並且可以導到分頁 backend_social.html backend_user.html BackendController.java CartitemVO.java  應該是修lombok 動到的 CartService.java 應該是修lombok 動到的

--- a/src/main/resources/static/css/backend/style.css
+++ b/src/main/resources/static/css/backend/style.css
@@ -227,6 +227,14 @@ tr:nth-child(2n+3){
     }
 }
 
+.side-bar a.nav{
+    transition: all .5s;
+}
+
+.side-bar a.nav:hover{
+    color:#3758dd;
+
+}
 
 
 
