--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1082,15 +1082,16 @@
 
 
     <!-- footer 頁尾 -->
-    <div class="copyright-area copyright-style-1 ptb--20 bg-color-darker g2_footer">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-12">
-                    <p class="rbt-link-hover text-center color-white-off">Fit AnyWhere© </p>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--     <div class="copyright-area copyright-style-1 ptb--20 bg-color-darker g2_footer"> -->
+<!--         <div class="container"> -->
+<!--             <div class="row align-items-center"> -->
+<!--                 <div class="col-12"> -->
+<!--                     <p class="rbt-link-hover text-center color-white-off">Fit AnyWhere© </p> -->
+<!--                 </div> -->
+<!--             </div> -->
+<!--         </div> -->
+<!--     </div> -->
+<footer th:replace="front-end/footer.html"></footer>
 
     <!-- go top 跳到最上面 -->
     <div class="rbt-progress-parent">
