commit for backup

--- a/src/main/resources/templates/front-end/ad/instructor-advertising.html
+++ b/src/main/resources/templates/front-end/ad/instructor-advertising.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head th:insert="~{/front-end/included-head}"></head>
+<head th:replace="~{/front-end/included-head}"></head>
 <!-- <head> -->
 <!--     <meta charset="utf-8"> -->
 <!--     <meta http-equiv="x-ua-compatible" content="ie=edge"> -->
