--- a/src/main/resources/templates/back-end/backend_included_sidebar.html
+++ b/src/main/resources/templates/back-end/backend_included_sidebar.html
@@ -30,7 +30,7 @@
 			</ol></li>
 		<li><a href=""></a>
 			<ol>
-				<li><a href="" class="nav">登出</a></li>
+				<li><a href="/backend_login_api/admin_logout" class="nav">登出</a></li>
 			</ol></li>
 	</ul>
 </div>
