--- a/src/main/resources/templates/back-end/backend_login.html
+++ b/src/main/resources/templates/back-end/backend_login.html
@@ -256,7 +256,7 @@
                         if (response.ok) {
                             // 如果HTTP狀態碼為200-299
                             // alert("登入成功"); // 顯示成功訊息
-                            window.location.href = "/backend_user"; // 登入成功後跳轉到指定的頁面
+                            window.location.href = "/backend_userlist"; // 登入成功後跳轉到指定的頁面
                             return; // 結束處理
                         } else {
                             // 處理不同的HTTP狀態碼
