--- a/src/main/resources/templates/back-end/backend_userlist_with_page.html
+++ b/src/main/resources/templates/back-end/backend_userlist_with_page.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:insert="~{/back-end/backend_included_head}">
-
-</head>
+<head th:insert="~{/back-end/backend_included_head}"></head>
 
 <body>
     <!-- header -->
@@ -25,17 +23,21 @@
         <!-- 內容 -->
         <div class="content">
             <h1>用戶名單</h1>
-            <div class="content-row">
-                <input type="text" class="search" placeholder="搜尋電子信箱">
-                <button class="search-action">搜尋</button>
-                <select name="filterStatus" id="filterStatus" class="filter-state">
+            <div class="content-row" style="display: flex; justify-content: center; align-items: center;">
+                <form action="/backend_userlist_searchByEmail" method="get" style="display: flex; justify-content: center; align-items: center; margin-right: 10px;">
+                    <input type="text" name="email" class="search" style="width: 60%;" placeholder="搜尋電子信箱">
+                    <button type="submit" class="search-action" style="margin-left: 10px;">搜尋</button>
+                </form>
+                <select name="filterStatus" id="filterStatus" class="filter-state" style="margin-left: 20px;">
                     <option value="none" selected hidden>篩選用戶狀態</option>
                     <option value="0">全部</option>
                     <option value="1">啟用中</option>
                     <option value="2">已停權</option>
                 </select>
             </div>
-
+            
+                       
+            
             <table class="backstage_table backstage_user_table">
                 <thead>
                     <tr>
