update social_post : controller js html

--- a/src/main/resources/templates/front-end/socialpost/student_socialpost.html
+++ b/src/main/resources/templates/front-end/socialpost/student_socialpost.html
@@ -109,10 +109,10 @@
 								<div class="content-social-post">
 									<div class="content-inner">
 										<div class="user-section-title">
-											<span th:text="${userVO.uId}" class="uid-for-send"></span>
+											<span th:text="${userShowPostVO.uId}" class="uid-for-send"></span>
 											<div id="article">
 												<img
-													th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userVO.uId}"
+													th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userShowPostVO.uId}"
 													alt="">
 											</div>
 											<div id="article member-col">
@@ -204,17 +204,18 @@
 
 								</div>
 							</div>
-							<div th:each="socialPost : ${userVO.socialposts}"
+							<span th:if="${navUId != null}" th:text="${navUId}" class="navUId">aaa</span>
+							<div th:each="socialPost : ${userShowPostVO.socialposts}"
 								th:if="${socialPost.spstatus == 1}">
 								<div class="article-post">
 									<div class="title">
 										<div class="title-info-wrapper">
 											<img
-												th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userVO.uId}"
+												th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userShowPostVO.uId}"
 												alt="">
 
 											<div class="title-info">
-												<p th:text="${userVO.uNickname}">振宇健身房</p>
+												<p th:text="${userShowPostVO.uNickname}">振宇健身房</p>
 												<p
 													th:text="${#dates.format(socialPost.sptime, 'yyyy年MM月dd日')}">2023年8月1日</p>
 											</div>
@@ -227,6 +228,7 @@
 									</div>
 
 									<div class="post-content">
+									
 										<p th:text="${socialPost.spid}" class="spid"></p>
 										<p th:text="${socialPost.sptitle}">title</p>
 										<p th:text="${socialPost.spcontent}">content</p>
