--- a/src/main/resources/templates/back-end/backend_included_sidebar.html
+++ b/src/main/resources/templates/back-end/backend_included_sidebar.html
@@ -2,7 +2,7 @@
 	<ul>
 		<li><a href=""> 用戶管理 </a>
 			<ol>
-				<li><a href="/backend_user" class="nav">用戶名單</a></li>
+				<li><a href="/backend_userlist" class="nav">用戶名單</a></li>
 			</ol></li>
 		<li><a href="">買賣課程管理</a>
 			<ol class="dropdown">
