--- a/src/main/resources/templates/front-end/socialpost/student_socialpost.html
+++ b/src/main/resources/templates/front-end/socialpost/student_socialpost.html
@@ -205,9 +205,10 @@
 								</div>
 							</div>
 							<span th:if="${navUId != null}" th:text="${navUId}" class="navUId">aaa</span>
-							<span th:if="${#strings.isEmpty(navUId)}" >測試字 - 新增貼文</span>
+<!-- 							<span th:if="${#strings.isEmpty(navUId)}" >測試字 - 新增貼文</span> -->
 							<div th:each="socialPost : ${userShowPostVO.socialposts}"
 								th:if="${socialPost.spstatus == 1}">
+								
 								<div class="article-post">
 									<div class="title">
 										<div class="title-info-wrapper">
@@ -216,14 +217,14 @@
 												alt="">
 
 											<div class="title-info">
-												<p th:text="${userShowPostVO.uNickname}">振宇健身房</p>
+												<p th:text="${userShowPostVO.uNickname}"></p>
 												<p
-													th:text="${#dates.format(socialPost.sptime, 'yyyy年MM月dd日')}">2023年8月1日</p>
+													th:text="${#dates.format(socialPost.sptime, 'yyyy年MM月dd日')}"></p>
 											</div>
 										</div>
 										<div class="button-container">
-											<img th:src="@{/images/social-edit.png}" alt="" class="edit">
-											<img th:src="@{/images/social-delete.png}" alt=""
+											<img th:src="@{/images/social-edit.png}" alt="" class="edit" th:if="${#strings.isEmpty(navUId)}">
+											<img th:src="@{/images/social-delete.png}" th:if="${#strings.isEmpty(navUId)}" alt=""
 												class="delete-socialpost">
 										</div>
 									</div>
@@ -235,7 +236,8 @@
 										<p th:text="${socialPost.spcontent}">content</p>
 										<img
 											th:src="@{/socialpost/DBGifReader} + '?spid=' + ${socialPost.spid}"
-											alt=""> <input type="text" class="social-reply-input"
+											alt=""> 
+										<input type="text" class="social-reply-input"
 											placeholder="留言...">
 										<div class="social-reply"
 											th:each="socialReply : ${socialPost.socialReplys}">
