--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -71,7 +71,7 @@
                         </li>
 
                         <li class="access-icon">
-                            <a class="rbt-round-btn" href="#">
+                            <a class="rbt-round-btn opinion-btn" href="#">
                                 <i class="feather-mail"></i>
                             </a>
                         </li>
@@ -523,6 +523,8 @@
             </div>
         </div>
     </div>
+
+   	<div th:replace="front-end/included_mail.html"></div>
     <!-- End Side Vav -->
     <a class="rbt-close_side_menu" href="javascript:void(0);"></a>
 </header>
