--- a/src/main/resources/templates/front-end/user/user_register.html
+++ b/src/main/resources/templates/front-end/user/user_register.html
@@ -19,22 +19,23 @@
 
     <!-- CSS
         ============================================ -->
-    <link rel="stylesheet" th:href="@{/css/vendor/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/vendor/slick.css}" />
-    <link rel="stylesheet" th:href="@{/css/vendor/slick-theme.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/sal.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/feather.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/fontawesome.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/euclid-circulara.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/swiper.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/magnify.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/odometer.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/animation.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/bootstrap-select.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/jquery-ui.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/magnigy-popup.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/plugins/plyr.css}" />
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" th:href="@{/assets/css/vendor/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/vendor/slick.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/vendor/slick-theme.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/sal.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/feather.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/fontawesome.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/euclid-circulara.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/swiper.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/magnify.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/odometer.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/animation.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/bootstrap-select.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/jquery-ui.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/magnigy-popup.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/plugins/plyr.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/style.css}">
+    
     <link rel="stylesheet" th:href="@{/css/style_add.css}" />
     <link rel="stylesheet" th:href="@{/css/joy/register.css}" />
     <link rel="stylesheet" th:href="@{/css/mok/mok_opinion.css}" />
@@ -52,98 +53,99 @@
 
   <body class="rbt-header-sticky body-register">
     <!-- Start Header Area  頁首 桌機-->
-    <header class="rbt-header rbt-header-10">
-      <div class="rbt-sticky-placeholder"></div>
-      <div class="rbt-header-wrapper header-space-betwween header-transparent header-sticky">
-        <div class="container-fluid">
-          <div class="mainbar-row rbt-navigation-start align-items-center">
-            <div class="header-left rbt-header-content">
-              <div class="header-info">
-                <div class="logo">
-                  <a href="index.html">
-                    <img th:src="@{/images/logo/fitanywherelogo.png}"
-                      alt="Education Logo Images" />
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="rbt-main-navigation d-none d-xl-block">
-              <nav class="mainmenu-nav">
-                <ul class="mainmenu">
-                  <li class="with-megamenu has-menu-child-item position-static mainmenu-sub not-hamber">
-                    <a href="#">TDEE / FFMI計算公式</a>
-                  </li>
+    <header th:replace="front-end/header_before_login.html"></header>	
+<!--     <header class="rbt-header rbt-header-10"> -->
+<!--       <div class="rbt-sticky-placeholder"></div> -->
+<!--       <div class="rbt-header-wrapper header-space-betwween header-transparent header-sticky"> -->
+<!--         <div class="container-fluid"> -->
+<!--           <div class="mainbar-row rbt-navigation-start align-items-center"> -->
+<!--             <div class="header-left rbt-header-content"> -->
+<!--               <div class="header-info"> -->
+<!--                 <div class="logo"> -->
+<!--                   <a href="index.html"> -->
+<!--                     <img th:src="@{/images/logo/fitanywherelogo.png}" -->
+<!--                       alt="Education Logo Images" /> -->
+<!--                   </a> -->
+<!--                 </div> -->
+<!--               </div> -->
+<!--             </div> -->
+<!--             <div class="rbt-main-navigation d-none d-xl-block"> -->
+<!--               <nav class="mainmenu-nav"> -->
+<!--                 <ul class="mainmenu"> -->
+<!--                   <li class="with-megamenu has-menu-child-item position-static mainmenu-sub not-hamber"> -->
+<!--                     <a href="#">TDEE / FFMI計算公式</a> -->
+<!--                   </li> -->
 
-                  <li class="with-megamenu has-menu-child-item mainmenu-sub not-hamber">
-                    <a href="./g2-blog-list.html">討論區</a>
-                  </li>
+<!--                   <li class="with-megamenu has-menu-child-item mainmenu-sub not-hamber"> -->
+<!--                     <a href="./g2-blog-list.html">討論區</a> -->
+<!--                   </li> -->
 
-                  <li class="has-dropdown has-menu-child-item mainmenu-sub not-hamber">
-                    <a href="./student-dashboard.html">會員中心</a>
-                  </li>
+<!--                   <li class="has-dropdown has-menu-child-item mainmenu-sub not-hamber"> -->
+<!--                     <a href="./student-dashboard.html">會員中心</a> -->
+<!--                   </li> -->
 
-                  <li class="with-megamenu has-menu-child-item position-static mainmenu-sub not-hamber">
-                    <a href="./g2-02-course-school.html">線上課程<i class="feather-chevron-down"></i></a>
-                  </li>
+<!--                   <li class="with-megamenu has-menu-child-item position-static mainmenu-sub not-hamber"> -->
+<!--                     <a href="./g2-02-course-school.html">線上課程<i class="feather-chevron-down"></i></a> -->
+<!--                   </li> -->
 
-                  <li class="not-hamber">
-                    <a href=""><img th:src="@{/images/bell.png}" alt="" /></a>
-                  </li>
-                  <li class="not-hamber">
-                    <a href="./g2-cart.html"><img th:src="@{/images/cart.png}"
-                        alt="" /></a>
-                  </li>
-                  <li class="not-hamber">
-                    <a href="" class="button_model feed_back">
-                      <img th:src="@{/images/mail.png}" alt="" />
-                    </a>
-                    <div id="lightbox" class="none">
-                      <form action="">
-                        <article>
-                          <div class="article-inner-wrapper">
-                            <h1>意見回饋</h1>
-                            <div class="feed-back-row1">
-                              <p>暱稱</p>
-                              <input type="text" placeholder="哈哈哈" value="" disabled />
-                            </div>
-                            <div class="feed-back-row2">
-                              <p>帳號</p>
-                              <input type="text" placeholder="jay6666666@gmail.com" value="" disabled />
-                            </div>
-                            <div class="feed-back-row3">
-                              <p>意見回饋</p>
-                              <input type="textarea" class="feedback" />
-                            </div>
-                            <div class="feed-back-button">
-                              <button type="button" class="confirm">
-                                確認
-                              </button>
-                              <button type="button" class="btn_model_close">
-                                取消
-                              </button>
-                            </div>
-                          </div>
-                        </article>
-                      </form>
-                    </div>
-                  </li>
-                  <li class="with-megamenu has-menu-child-item position-static mainmenu-sub not-hamber">
-                    <a href="./g2-register.html">登入 / 註冊</a>
-                  </li>
-                  <li class="hamber">
-                    <div class="hamberger">
-                      <button class="hamberger-button rbt-round-btn">
-                        <i class="feather-menu"></i>
-                      </button>
-                    </div>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
+<!--                   <li class="not-hamber"> -->
+<!--                     <a href=""><img th:src="@{/images/bell.png}" alt="" /></a> -->
+<!--                   </li> -->
+<!--                   <li class="not-hamber"> -->
+<!--                     <a href="./g2-cart.html"><img th:src="@{/images/cart.png}" -->
+<!--                         alt="" /></a> -->
+<!--                   </li> -->
+<!--                   <li class="not-hamber"> -->
+<!--                     <a href="" class="button_model feed_back"> -->
+<!--                       <img th:src="@{/images/mail.png}" alt="" /> -->
+<!--                     </a> -->
+<!--                     <div id="lightbox" class="none"> -->
+<!--                       <form action=""> -->
+<!--                         <article> -->
+<!--                           <div class="article-inner-wrapper"> -->
+<!--                             <h1>意見回饋</h1> -->
+<!--                             <div class="feed-back-row1"> -->
+<!--                               <p>暱稱</p> -->
+<!--                               <input type="text" placeholder="哈哈哈" value="" disabled /> -->
+<!--                             </div> -->
+<!--                             <div class="feed-back-row2"> -->
+<!--                               <p>帳號</p> -->
+<!--                               <input type="text" placeholder="jay6666666@gmail.com" value="" disabled /> -->
+<!--                             </div> -->
+<!--                             <div class="feed-back-row3"> -->
+<!--                               <p>意見回饋</p> -->
+<!--                               <input type="textarea" class="feedback" /> -->
+<!--                             </div> -->
+<!--                             <div class="feed-back-button"> -->
+<!--                               <button type="button" class="confirm"> -->
+<!--                                 確認 -->
+<!--                               </button> -->
+<!--                               <button type="button" class="btn_model_close"> -->
+<!--                                 取消 -->
+<!--                               </button> -->
+<!--                             </div> -->
+<!--                           </div> -->
+<!--                         </article> -->
+<!--                       </form> -->
+<!--                     </div> -->
+<!--                   </li> -->
+<!--                   <li class="with-megamenu has-menu-child-item position-static mainmenu-sub not-hamber"> -->
+<!--                     <a href="./g2-register.html">登入 / 註冊</a> -->
+<!--                   </li> -->
+<!--                   <li class="hamber"> -->
+<!--                     <div class="hamberger"> -->
+<!--                       <button class="hamberger-button rbt-round-btn"> -->
+<!--                         <i class="feather-menu"></i> -->
+<!--                       </button> -->
+<!--                     </div> -->
+<!--                   </li> -->
+<!--                 </ul> -->
+<!--               </nav> -->
+<!--             </div> -->
+<!--           </div> -->
+<!--         </div> -->
+<!--       </div> -->
+<!--     </header> -->
     <!-- End Header Area  -->
 
     <!-- Start Side Vav -->
@@ -405,17 +407,18 @@
     </div>
 
     <!-- Start Footer aera -->
-    <div class="copyright-area copyright-style-1 ptb--20 bg-color-darker g2_footer">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-12">
-            <p class="rbt-link-hover text-center color-white-off">
-              Fit AnyWhere©
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+<!--     <div class="copyright-area copyright-style-1 ptb--20 bg-color-darker g2_footer"> -->
+<!--       <div class="container"> -->
+<!--         <div class="row align-items-center"> -->
+<!--           <div class="col-12"> -->
+<!--             <p class="rbt-link-hover text-center color-white-off"> -->
+<!--               Fit AnyWhere© -->
+<!--             </p> -->
+<!--           </div> -->
+<!--         </div> -->
+<!--       </div> -->
+<!--     </div> -->
+<footer th:replace="front-end/footer.html"></footer>
     <!-- End Footer aera -->
 
     <!-- Start Copyright Area  -->
