--- a/src/main/resources/templates/front-end/cart/checkout.html
+++ b/src/main/resources/templates/front-end/cart/checkout.html
@@ -734,18 +734,15 @@
 
                         <!-- Billing Address -->
                         <div id="billing-form">
-                            <h4 class="checkout-title">Billing Address</h4>
+                            <h4 class="checkout-title">帳單地址</h4>
 
                             <div class="row">
 
-                                <div class="col-md-6 col-12 mb--20">
-                                    <label>First Name*</label>
-                                    <input type="text" placeholder="First Name">
-                                </div>
+
 
                                 <div class="col-md-6 col-12 mb--20">
-                                    <label>Last Name*</label>
-                                    <input type="text" placeholder="Last Name">
+                                    <label>姓名*</label>
+                                    <input type="text" placeholder="請輸入姓名">
                                 </div>
 
                                 <div class="col-md-6 col-12 mb--20">
