--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -523,7 +523,7 @@
             </div>
         </div>
     </div>
-
+	<div th:replace="front-end/included_mail.html"></div>
     <!-- End Side Vav -->
     <a class="rbt-close_side_menu" href="javascript:void(0);"></a>
 </header>
