修改 social_post.js
改成先用 jQuery 渲染到下面

把新增留言的重導改掉

修 HTML 以讓 jQuery 有更多資料可以取

--- a/src/main/resources/templates/front-end/socialpost/student_socialpost.html
+++ b/src/main/resources/templates/front-end/socialpost/student_socialpost.html
@@ -34,7 +34,9 @@
 
 						<div class="col-lg-9">
 							<div class="rbt-dashboard-content ">
-
+								<span th:text="${userShowPostVO.uId}" class="uId"></span>
+								<span th:text="${userShowPostVO.uNickname}" class="uNickname"></span>
+								<span th:text="${userShowPostVO.uHeadshot}" class="uHeadshot"></span>
 								<div class="input-wrapper">
 									<input type="text" placeholder="搜尋其他用戶"
 										class="search-member-social"> <img
